RESOLVED FIXED133578
Latched scrolling tests are flakey on Mavericks
https://bugs.webkit.org/show_bug.cgi?id=133578
Summary Latched scrolling tests are flakey on Mavericks
Simon Fraser (smfr)
Reported 2014-06-06 10:16:33 PDT
Latched scrolling tests are flakey on Mavericks
Attachments
Patch (34.04 KB, patch)
2014-06-06 10:21 PDT, Simon Fraser (smfr)
bfulgham: review+
Simon Fraser (smfr)
Comment 1 2014-06-06 10:21:47 PDT
Brent Fulgham
Comment 2 2014-06-06 10:28:49 PDT
Comment on attachment 232620 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=232620&action=review Thank you for tracking this down. r=me. > LayoutTests/platform/mac-wk2/tiled-drawing/fast-scroll-div-latched-div-expected.txt:58 > +Page after: 0, div after: 666 666? :-|
Simon Fraser (smfr)
Comment 3 2014-06-06 10:42:39 PDT
Note You need to log in before you can comment on or make changes to this bug.